{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 97,
  "lineage": "8f3099d5-aee0-953f-8a89-96a47db128b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2DOCKER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:734387165040:instance/i-03262f420a818e89e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03262f420a818e89e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DEVOPS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071df64487e5056f7",
            "private_dns": "ip-192-168-0-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.20",
            "public_dns": "ec2-18-234-121-186.compute-1.amazonaws.com",
            "public_ip": "18.234.121.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07e3dab7a5df05af2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a79cfee0bf6572a",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a7fe9c263a58683"
            ]
          },
          "dependencies": [
            "aws_subnet.SUB_PUB",
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:security-group/sg-02fdcb5f93214ce79",
            "description": "Security group para EC2",
            "egress": [],
            "id": "sg-02fdcb5f93214ce79",
            "ingress": [],
            "name": "EC2-GROUP",
            "name_prefix": "",
            "owner_id": "734387165040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-EC2"
            },
            "tags_all": {
              "Name": "SG-EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-082eb959d20173d57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUB_PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:subnet/subnet-02a79cfee0bf6572a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a79cfee0bf6572a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734387165040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-082eb959d20173d57"
          },
          "dependencies": [
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "STACKOBSERVABILITY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:vpc/vpc-082eb959d20173d57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/26",
            "default_network_acl_id": "acl-0a8836fac95f0416f",
            "default_route_table_id": "rtb-01f318e12b60e255d",
            "default_security_group_id": "sg-04a7fe9c263a58683",
            "dhcp_options_id": "dopt-001f0dd89d3829f75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082eb959d20173d57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f318e12b60e255d",
            "owner_id": "734387165040",
            "tags": {
              "Name": "STACKOBSERVABILITY"
            },
            "tags_all": {
              "Name": "STACKOBSERVABILITY"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:security-group-rule/sgr-0c8b2483b93a007bd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0c8b2483b93a007bd",
            "ip_protocol": "All",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02fdcb5f93214ce79",
            "security_group_rule_id": "sgr-0c8b2483b93a007bd",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-EC2",
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:security-group-rule/sgr-0dcd7477e7dd19bda",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0dcd7477e7dd19bda",
            "ip_protocol": "All",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02fdcb5f93214ce79",
            "security_group_rule_id": "sgr-0dcd7477e7dd19bda",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-EC2",
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "any",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734387165040:security-group-rule/sgr-02e7e49195fac52e9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-02e7e49195fac52e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-02fdcb5f93214ce79",
            "security_group_rule_id": "sgr-02e7e49195fac52e9",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG-EC2",
            "aws_vpc.STACKOBSERVABILITY"
          ]
        }
      ]
    }
  ]
}